test/functions/this/bradc/domainSliceConfusion.good
domainSliceConfusion.chpl:8: In method 'this':
domainSliceConfusion.chpl:9: error: unresolved access of '[domain(1,int(32),one)] real(64)' by '(int(64))'
